Correcciones
Por ahora funciona
- agendar contactos
- crear conversaciones